--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -13,10 +13,10 @@
             </a>
 
             <a (click)='selectedTab = 2'>
-                <mat-icon matTooltip="Settings" matTooltipPosition="right" [ngStyle]="{'color':(selectedTab === 2) ? '#FF7070' : '#9ba1ca'}" aria-hidden="false"
+                <!-- <mat-icon matTooltip="Settings" matTooltipPosition="right" [ngStyle]="{'color':(selectedTab === 2) ? '#FF7070' : '#9ba1ca'}" aria-hidden="false"
                     aria-label="Example home icon">
                     settings
-                </mat-icon>
+                </mat-icon> -->
             </a>
 
             <a [routerLink]="['/my-debt']" (click)='selectedTab = 3'>
