--- a/src/app/homepage/dashboard/dashboard.component.scss
+++ b/src/app/homepage/dashboard/dashboard.component.scss
@@ -51,6 +51,7 @@
 
       .card {
         max-width: 11.5rem;
+        min-width: 11.5rem;
         max-height: 20rem;
         margin: 1rem 2rem 1rem 0px;
 
@@ -98,10 +99,15 @@
     grid-row: 1/2;
     display: flex;
     flex-direction: column;
-    padding-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-bottom: 1rem;
 
     .card {
-      height: 90%;
+      height: 82%;
+      margin-bottom: 0;
+      justify-content: center;
     }
   }
 
@@ -111,24 +117,79 @@
     margin-top: 2vh;
 
     .card {
-      width: 90%;
-      max-height: 15rem;
-      overflow-y: auto;
+      width: 95.5%;
+      max-height: 20rem;
+      overflow-y: hidden;
 
-      .news-item {
-        .news-item-header {
-          margin: 1rem auto;
-          p {
-            display: inline;
-            margin-right: 5rem;
-          }
-        }
+      .left {
+        right: 90px;
+      }
 
-        button {
-          margin-bottom: 1rem;
-          float: right;
+      .nav-button {
+        height: 40px;
+        width: 40px;
+        border-radius: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        padding: 0;
+        bottom: 5px;
+        color: $pink;
+        cursor: pointer;
+
+        &:last-child {
+          right: 30px;
         }
       }
+
+      drag-scroll {
+        height: 20rem;
+        width: 50vw;
+
+        div {
+          vertical-align: top !important;
+        }
+
+        .announcement-item {
+          min-height: 20rem;
+          height: 20rem;
+          width: 50vw;
+          margin-top: 1rem;
+
+          p {
+            margin: 0;
+          }
+
+          .title {
+            font-size: 24px;
+            font-weight: 500;
+            margin-bottom: 10px;
+
+            .page {
+              float: right;
+              font-size: 14px;
+              font-weight: 100;
+              margin-right: 10px;
+            }
+          }
+
+          .author {
+            font-size: 14px;
+            margin-bottom: 10px;
+          }
+
+          .date {
+            color: grey;
+            margin-bottom: 2rem;
+          }
+
+          .content {
+            white-space: break-spaces;
+          }
+        }
+      }
+
     }
   }
 
