--- a/src/app/homepage/event-detail/event-detail.component.scss
+++ b/src/app/homepage/event-detail/event-detail.component.scss
@@ -54,6 +54,12 @@ section {
             margin-bottom: 10px;
           }
 
+          .time {
+            font-weight: bold;
+            font-size: 24px;
+            line-height: 1.2;
+          }
+
           .secondary-info {
             font-size: 24px;
           }
