- [Admin_panel] Fix update event not working - [Admin_panel] Added announcement management component - [Admin_panel] Connect announcement queries to fetch, update, and create on the admin panel announcement menu - [Profile] Update query to update profile to include new type of update

--- a/src/app/homepage/admin-panel/admin-panel.component.html
+++ b/src/app/homepage/admin-panel/admin-panel.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <p>Uang Kas</p>
             </div>
-            <div class="card">
+            <div class="card" [routerLink]="['./announcements']" routerLinkActive="active-card">
                 <div>
                     <mat-icon>article</mat-icon>
                 </div>
