--- a/src/app/homepage/dashboard/dashboard.component.html
+++ b/src/app/homepage/dashboard/dashboard.component.html
@@ -31,7 +31,9 @@
             </div>
         </div>
         <div class="news">
-            <p class="subheader">Announcements</p>
+            <p class="subheader">Announcements <span class="add-button" (click)="addAnnouncement()">
+                    <mat-icon>add</mat-icon>
+                </span></p>
             <div class="card">
                 <!-- <div class="news-item" *ngFor="let item of (announcements$ | async)?.announcementsArray"> 
                     <div class="news-item-header">
@@ -42,24 +44,32 @@
                     <p>{{item.description}}</p>
                     <div class="divider"></div>
                 </div> -->
-                <drag-scroll #nav (indexChanged)="onChangeIndex($event)" [scrollbar-hidden]="true" [drag-scroll-y-disabled]="true">
-                    <div class="announcement-item" *ngFor="let item of (announcements$ | async)?.announcementsArray; let i = index" drag-scroll-item>
-                        <p class="title">{{item?.title}} <span class="page">{{i + 1}}/{{(announcements$ | async)?.announcementsArray?.length}}</span></p>
+                <drag-scroll #nav (indexChanged)="onChangeIndex($event)" [scrollbar-hidden]="true"
+                    [drag-scroll-y-disabled]="true">
+                    <div class="announcement-item"
+                        *ngFor="let item of (announcements$ | async)?.announcementsArray; let i = index"
+                        drag-scroll-item>
+                        <p class="title">{{item?.title}} <span class="page">{{i + 1}}/{{(announcements$ |
+                                async)?.announcementsArray?.length}}</span></p>
                         <p class="author">{{item?.authorName}}</p>
                         <p class="date">{{item?.date | date}}</p>
                         <p class="content">{{item?.content}}</p>
                     </div>
                 </drag-scroll>
 
-                <div class="card nav-button left" mat-icon-button (click)="moveLeft()"><mat-icon>chevron_left</mat-icon></div>
-                <div class="card nav-button" mat-icon-button (click)="moveRight()"><mat-icon>chevron_right</mat-icon></div>
-                  
+                <div class="card nav-button left" mat-icon-button (click)="moveLeft()">
+                    <mat-icon>chevron_left</mat-icon>
+                </div>
+                <div class="card nav-button" mat-icon-button (click)="moveRight()">
+                    <mat-icon>chevron_right</mat-icon>
+                </div>
+
             </div>
         </div>
         <div class="promoted">
             <p class="subheader">Promoted</p>
             <div class="card">
-                
+
             </div>
         </div>
     </div>
