- [institution_others_option] Add time validator to prevent user selecting start time to precedes the end time in the event creation dialog

--- a/src/app/homepage/admin-panel/admin-panel.component.html
+++ b/src/app/homepage/admin-panel/admin-panel.component.html
@@ -1,6 +1,7 @@
 <section>
     <p class="header">Panel Admin</p>
-    <div class="main-container">
+    <app-spinner *ngIf="isLoading"></app-spinner>
+    <div *ngIf="!isLoading" class="main-container">
         <div class="menu-section">
             <div class="card" [routerLink]="['./events']" routerLinkActive="active-card">
                 <div>
