--- a/src/app/homepage/dashboard/add-event-dialog/add-event-dialog.component.scss
+++ b/src/app/homepage/dashboard/add-event-dialog/add-event-dialog.component.scss
@@ -3,6 +3,12 @@
         margin: 0;
         padding: 0;
     }
+
+    .field-warning-text {
+        font-size: 12px;
+        color: red;
+        margin: 0;
+    }
 }
 
 .mat-dialog-actions {
