[Roles] Created UI for panel admin role [Roles] Created UI for dialog to assign roles

--- a/src/app/homepage/admin-panel/admin-panel.component.html
+++ b/src/app/homepage/admin-panel/admin-panel.component.html
@@ -21,6 +21,12 @@
                 </div>
                 <p>News</p>
             </div>
+            <div class="card" [routerLink]="['./roles']" routerLinkActive="active-card">
+                <div>
+                    <mat-icon>groups</mat-icon>
+                </div>
+                <p>Roles</p>
+            </div>
         </div>
         <div class="content-section">
             <router-outlet></router-outlet>
