--- a/src/app/homepage/admin-panel/admin-roles/admin-roles.component.html
+++ b/src/app/homepage/admin-panel/admin-roles/admin-roles.component.html
@@ -9,23 +9,27 @@
                 <input type="text" placeholder="Search Event" [formControl]="eventSearchInput" name="eventSearch">
             </div>
             <div class="col s9">
-                <mat-paginator #eventPaginator
-                    [ngClass]="{ 'hide': eventDataCount <= 0, 'hide-pagination-buttons': eventDataCount <= 10 }"
-                    [length]="eventDataCount" [hidePageSize]="true" [pageSize]="[10]" showFirstLastButtons>
+                <mat-paginator #userPaginator
+                    [ngClass]="{ 'hide': userDataCount <= 0, 'hide-pagination-buttons': userDataCount <= 10 }"
+                    [length]="userDataCount" [hidePageSize]="true" [pageSize]="[10]" showFirstLastButtons>
                 </mat-paginator>
             </div>
         </div>
 
-        <table mat-table [dataSource]="eventList">
+        <table mat-table [dataSource]="usersList">
 
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Full Name </th>
-                <td mat-cell *matCellDef="let element"> {{ element?.eventTitle }} </td>
+                <td mat-cell *matCellDef="let element"> {{ element?.fullName }} </td>
             </ng-container>
 
             <ng-container matColumnDef="roles">
                 <th mat-header-cell *matHeaderCellDef> Roles </th>
-                <td mat-cell *matCellDef="let element"> {{ element?.author?.authorName?.S }} </td>
+                <td mat-cell *matCellDef="let element">
+                    <mat-chip-list class="chips">
+                        <mat-chip *ngFor="let role of element?.roles">{{ role }}</mat-chip>
+                    </mat-chip-list>
+                </td>
             </ng-container>
 
             <ng-container matColumnDef="actions">
@@ -34,7 +38,6 @@
                     <mat-icon [routerLink]="['/event-detail']"
                     [queryParams]="{eventId: element?.eventId, date: element?.date}">visibility</mat-icon>
                     <mat-icon (click)="onEditRoles(element)">edit</mat-icon>
-                    <mat-icon (click)="onDeleteRoles(element)">delete</mat-icon>
                 </td>
             </ng-container>
 
